dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reshet-server-dev
  labels:
    app: reshet-server-dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: reshet-server-dev
